--- a/public/index.html
+++ b/public/index.html
@@ -22,11 +22,13 @@ html, body {
   padding: 0px;
   width: 100%;
   height: 100%;
+  overflow: hidden;
 }
 
 #app {
   /* position: relative; */
   height: 100%;
   width: 100%;
+  overflow: hidden;
 }
 </style>
